# MLPFromScratch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
MLPFromScratch/: CMakeLists.txt  MLPFromScratch.cpp  MLPFromScratch.h
MLPFromScratch/examples/: example.h  polynomial.cpp  xor.cpp
MLPFromScratch/examples/MNIST/: mnist_example.cpp  mnist_reader.cpp
MLPFromScratch/include/: catch.hpp
MLPFromScratch/src/: config.h
MLPFromScratch/src/Exceptions/: DimensionException.h
MLPFromScratch/src/Functions/: Activation.h  Loss.h
MLPFromScratch/src/Layer/: Layer.cpp  Layer.h  Layer.test.cpp
MLPFromScratch/src/MLP/: MLP.cpp  MLP.h  MLP.test.cpp
MLPFromScratch/src/Matrix/: Matrix.cpp  Matrix.cu  Matrix.cuh  Matrix.h  Matrix.test.cpp
MLPFromScratch/src/Neuron/: Neuron.cpp  Neuron.h  Neuron.test.cpp
MLPFromScratch/src/Vector/: Vector.cpp  Vector.cu  Vector.cuh  Vector.h  Vector.test.cpp
